# MCPSec

./: .gitignore  README.md  mcpsec_report_scan_20260226_200957_97d267.html  pyproject.toml  report.sarif
.github/workflows/: cli.yml  publish.yml
src/mcpsec/: cli.py  exceptions.py  server.py  storage.py
src/mcpsec/llm/: __init__.py  classifier.py  passthrough.py
src/mcpsec/models/: findings.py
src/mcpsec/reports/: __init__.py  html.py  markdown.py  sarif.py  scorecard.py
src/mcpsec/scanner/: __init__.py  auth.py  authorization.py  config.py  supply_chain.py  tools.py  transport.py
tests/: conftest.py  test_llm_live.py  test_llm_live_exa.py  test_models.py  test_scorecard.py  test_storage.py
tests/scanner/: test_auth.py  test_authorization.py  test_classifier.py  test_tools.py  test_transport.py
tests/servers/: compliant.py  non_compliant.py
