[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpsec"
version = "0.1.0"
description = "MCP Security Scanner"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
]


[tool.hatch.build.targets.wheel]
packages = ["src/mcpsec"]

[project.scripts]
mcpsec = "mcpsec.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "llm: requires live LLM API key (ANTHROPIC_API_KEY, OPENAI_API_KEY, etc.)",
     "exa: requires network access to mcp.exa.ai",
]
filterwarnings = [
    "ignore::RuntimeWarning:litellm",
    "ignore::DeprecationWarning:aiohttp",
]
